# red-hela

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  info.json  nginx.conf  pyproject.toml
.cursor/rules/: python-principal-engineer.mdc
resources/: centroids.npy  cluster_offsets.npy  labels.npy  tree.npz
scripts/: build_all.ps1  build_index.sh
src/red_hela/: knn_core.c  main.py
src/red_hela/adapters/http/: app.py  responses.py
src/red_hela/adapters/persistence/: artifact_loader.py
src/red_hela/domain/: ports.py  transaction.py  vector_search.py  vectorize.py
src/red_hela/infrastructure/: index_utils.py  logging_setup.py  pack_ivf.py  pack_references.py
